Fix spacing between image elements

--- a/components/containers/App.less
+++ b/components/containers/App.less
@@ -33,6 +33,8 @@ img {
 	border: 1px solid;
 	width: 300px;
 	box-shadow: -2px 2px 28px 0px rgba(0, 0, 0, 0.57);
+	margin: 10px;
+
 }
 
 .containerSearchBar {
@@ -108,4 +110,5 @@ input:focus {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content:space-evenly; 
+	align-content: space-between;
 }
